style(member): improve phrasing on team member badges and trends pages

--- a/app/views/teams/member/_badges.html.erb
+++ b/app/views/teams/member/_badges.html.erb
@@ -2,7 +2,7 @@
 
 <div class="pb-6 mt-10 mb-6 border-b dark:border-slate-700">
   <h1 class="heading">Badges</h1>
-  <p class="text-soft">Badges <%= member_is_current ? 'you have' : "#{member.first_name} has" %> earned by reaching streak, mileage, and long run milestones.</p>
+  <p class="text-soft">Badges that <%= member_is_current ? 'you have' : "#{member.first_name} has" %> earned by achieving streak, mileage, and long run milestones.</p>
 </div>
 
 <!-- Current Streak, Miles, & Long Runs Data -->
