fix(messages): remove pinned message existence check
This is already handled within the _pinned_message partial. If there is no pinned message, an empty div is rendered instead. This is so that when a message is pinned, Turbo can replace the empty div with the pinned message.

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -22,7 +22,7 @@
       <% end %>
     </div>
 
-    <%= render 'pinned_message', message: @pinned_message if @pinned_message %>
+    <%= render 'pinned_message', message: @pinned_message %>
   </div>
 
   <div data-controller="pagination scroll" data-pagination-load-more-path-value="<%= load_more_team_topic_messages_path(@team, @topic) %>">
